# bF

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/: bf.bf  comments.bf  err1.bf  err2.bf  hello2.bf  hello3.bf  hello4.bf  short_hello_world.bf
include/: core.h  log.h  memory.h  parser.h  util.h
src/: config.h  core.h  log.h  main.cc  memory.h  parser.h  util.h
